# JDHR

./: README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/datasets/dnerf_synthetic/: dnerf_synthetic.yaml  jumpingjacks.yaml
configs/datasets/renbody/: 0013_09.yaml  0013_09_obj.yaml  ratio.yaml  renbody.yaml
configs/exps/JDHR/: jdhr_0013_01_r4.yaml  jdhr_0013_09_r4.yaml
configs/exps/kplanes/: kplanes_0013_09.yaml
configs/exps/ngpt/: ngpt_0013_09.yaml  ngpt_jumpingjacks_static_mask.yaml
configs/models/: kplanes.yaml  ngpt.yaml  r4dv.yaml
configs/specs/: mask.yaml  static.yaml  tiny.yaml
jdhr/dataloaders/datasets/: __init__.py  generalizable_dataset.py  geometry_dataset.py  image_based_dataset.py  image_based_inference_dataset.py  image_based_streaming_dataset.py  noop_dataset.py  volumetric_video_dataset.py  volumetric_video_inference_dataset.py
jdhr/diff_point_rasterizater/: CMakeLists.txt  __init__.py  rasterize_points.py
jdhr/diff_point_rasterizater/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
jdhr/engine/: __init__.py  config.py  registry.py
jdhr/models/: noop_model.py  volumetric_video_model.py
jdhr/models/cameras/: noop_camera.py  optimizable_camera.py
jdhr/models/networks/: multilevel_network.py  noop_network.py  volumetric_video_network.py
jdhr/models/renderers/: noop_renderer.py  volume_renderer.py
jdhr/models/samplers/: gaussiant_sampler.py  importance_sampler.py  point_planes_sampler.py  r4dv_sampler.py  r4dvb_sampler.py  super_charged_r4dv.py  super_charged_r4dvb.py  uniform_sampler.py
jdhr/models/supervisors/: depth_supervisor.py  (+10 more)
jdhr/runners/: moderators.py  optimizers.py  recorders.py  schedulers.py  volumetric_video_runner.py  volumetric_video_viewer.py  websocket_server.py
jdhr/scripts/: main.py  wrap.py
jdhr/structures/: bucketize.py  meshes.py  pointclouds.py  utils.py
jdhr/utils/: SE3_exp_map.py  ball_query_utils.py  base_utils.py  blend_utils.py  bound_utils.py  cam_utils.py  chunk_utils.py  colmap_utils.py  color_utils.py  console_utils.py  cuda_utils.py  data_utils.py  depth_utils.py  dino_utils.py  easy_utils.py  egl_utils.py  enerf_utils.py  fcds_utils.py  fusion_utils.py  gaussian_utils.py  gl_utils.py  grid_utils.py  ibr_utils.py  image_utils.py  import_utils.py  json_utils.py  layer_utils.py  lie_utils.py  loss_utils.py  math_utils.py  mesh_utils.py  metric_utils.py  mocap_utils.py  mpi_utils.py  msssim_utils.py  mvs_utils.py  nerf_utils.py  net_utils.py  parallel_utils.py  physx_utils.py  (+19 more)
(+50 files in other folders)
